syntax = "proto3";

package echo_sphere.grpc_shared.errors;

message NotFoundError {}
